8/15/11 tweak molecular dipole interface and fields
8/15/11 make molecule location a simple field, doesn't need to be a Property
8/15/11 intermediate implementation of molecular dipole model and view, not functional yet
8/15/11 generalize 2D isosurface placeholder, add to triatomic molecule
8/15/11 generalize "rotatable molecule" interface, add rotation handler to triatomic molecule
8/15/11 update atom locations when molecule angle or bond angles change
8/15/11 change request: use gray background for periodic table, to provide more contrast between selected and unselected cells
8/15/11 first pass at fleshing out "Three Atoms" tab, only partially functional
8/15/11 change request: make "bond dipoles" on by default in "Two Atoms" tab
# 0.00.08 (55174) Aug 13, 2011
8/12/11 make sure that all PText instances have a call to setFont(PhetFont)
8/12/11 rename various TwoAtoms* classes to Diatomic*
8/12/11 javadoc throughout
8/12/11 fix Reset All so that it resets the molecule in Real Molecules
8/12/11 add currentMolecule property to Real Molecules model, observe in Jmol viewer and periodic table
8/12/11 reuse piccolo-phet's PeriodicTableNode
8/12/11 display element numbers in periodic table placeholder
8/12/11 Jmol: script to return element numbers, for use in periodic table
8/12/11 wire up "electron density" control in "Two Atoms" tab
8/12/11 Jmol: use different isosurfaces for homogeneous diatomic molecules
8/12/11 Jmol: wrote script to identify homogeneous diatomic molecules
8/12/11 change "bond dipoles" to "bond dipole" in Two Atoms tab
8/12/11 #3039, add Arrow.getHeadScale, use it to scale dipole cross
8/12/11 add cross to dipole by decorating arrow
8/11/11 cannibalize Vector2DNode for use in rewrite of DipoleNode
8/11/11 make TwoAtomsIsosurfaceNode observer atom locations, since those are the properties it relies on
8/11/11 rename "Test" control panel to "Electric Field"
8/11/11 first attempt at 2D isosurface